--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,6 +15,9 @@ spring.mail.password=password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# Serp API key
+api_key = ""
+
 
 #Show SQL
 spring.jpa.properties.hibernate.show_sql=true
