--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,6 +7,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 
+spring.mvc.converters.preferred-json-mapper=gson
+
 # Mail
 spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=587
@@ -16,7 +18,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Serp API key
-api_key = ""
+api_key = f74c...
 
 
 #Show SQL
