--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -20,6 +20,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # Serp API key
 api_key = f74c...
 
+# Geoapify API key
+geo_api_key = ecb...
+
 
 #Show SQL
 spring.jpa.properties.hibernate.show_sql=true
