Redirect to frontend main page

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -32,3 +32,9 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #Show bind values
 logging.level.org.hibernate.orm.jdbc.bind=trace
+
+#Frontend app address
+frontend_url = http://localhost:8089/
+
+#Backend app address
+backend_url = http://localhost:8080/
