--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,20 +1,30 @@
 spring.datasource.username= #dbname
 spring.datasource.password= #password
 spring.datasource.url= #database url
+
 spring.jpa.database=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.hikari.pool-name=RestDB-Pool
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.data-source-properties.cachePrepStmts=true
-spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
-spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
-spring.datasource.hikari.data-source-properties.useServerPrepStmts=true
-spring.datasource.hikari.data-source-properties.useLocalSessionState=true
-spring.datasource.hikari.data-source-properties.rewriteBatchedStatements=true
-spring.datasource.hikari.data-source-properties.cacheResultSetMetadata=true
-spring.datasource.hikari.data-source-properties.cacheServerConfiguration=true
-spring.datasource.hikari.data-source-properties.elideSetAutoCommits=true
-spring.datasource.hikari.data-source-properties.maintainTimeStats=false
+spring.mvc.converters.preferred-json-mapper=gson
+
+# Mail
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=587
+spring.mail.username=username
+spring.mail.password=password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Serp API key
+api_key = f74c...
+
+# Geoapify API key
+geo_api_key = ecb...
+
+#Frontend app address
+frontend_url = http://localhost:8089/
+
+#Backend app address
+backend_url = http://localhost:8080/
